Fix off-by-one error in URLParser::parseIPv4Host https://bugs.webkit.org/show_bug.cgi?id=162789

Reviewed by Tim Horton.

Source/WebCore:

The spec says "If any but the last item in numbers is greater than 255, return failure."
This means check up to size - 1, not size - 2.

Covered by a new API test.

* platform/URLParser.cpp:
(WebCore::URLParser::parseIPv4Host):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206650 268f45cc-cd09-0410-ab3c-d52691b4dbfc